# NamasteDev-Hackathon

./: .gitignore  README.md
backend/: README.md  pyproject.toml
backend/alembic/: README  env.py
backend/alembic/versions/: 28eafe6c0027_add_goal_model_and_update_models.py  5efb3229e8f4_add_currency_to_accounts.py  712c08307c56_create_accounts_and_transactions_tables.py  998c9c0fe1f0_create_users_table.py
backend/app/: config.py  main.py
backend/app/agent/: graph.py
backend/app/agent/prompts/: goal_prompt.py  prompt.py
backend/app/agent/tools/: account_tools.py  analytics_tools.py  combine_all_tools.py  goal_tools.py  transaction_tools.py
backend/app/api/: deps.py
backend/app/api/routes/: auth.py  user_services.py
backend/app/core/: llm.py
backend/app/core/auth/: dependencies.py  jwt.py
backend/app/db/: base.py  base_model.py  session.py
backend/app/models/: __init__.py  account.py  goals.py  transaction.py  user.py
backend/app/schema/: auth.py  input_schema.py  user_services.py
backend/app/test/: list_models.py  test_account_tools.py  test_db.py  test_graph.py  transaction_test.py  transaction_tool.py
backend/app/utils/: json_utils.py
frontend/: README.md  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/: layout.tsx
frontend/app/(root)/: layout.tsx  page.tsx
frontend/components/: AccountCard.tsx  AccountList.tsx  ChatWindow.tsx  Model.tsx  Navbar.tsx  TransactionCard.tsx  TransactionsList.tsx
frontend/context/: userProvider.tsx
frontend/lib/: auth.ts  types.ts
(+11 files in other folders)
