[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "google-genai>=2.12.0",
    "greenlet>=3.5.3",
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-openai>=1.3.5",
    "langgraph>=1.2.9",
    "langsmith>=0.10.5",
    "pgvector>=0.5.0",
    "psycopg2-binary>=2.9.12",
    "psycopg[binary]>=3.3.4",
    "pwdlib>=0.3.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "isort>=8.0.1",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
